--- a/settings.json
+++ b/settings.json
@@ -7,12 +7,12 @@
 	"anticall": false,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfc",
-	"ownername": "ZeeoneOfc",
-	"botname":"Ａʟᴘʜᴀʙᴏᴛ",
+	"ownerNumber": "6285365349803",
+	"ownerNumberr": "6285365349803",
+	"cr": "@Baall wangy",
+	"ownername": "paha Baall wangy",
+	"botname":"Bᴀᴀʟʙᴏᴛ",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @ZeeoneOfc"
+	"fake": " 「  Bᴀᴀʟʙᴏᴛ  」\nCreated By @Dzuxy"
 }
