--- a/settings.json
+++ b/settings.json
@@ -4,15 +4,17 @@
 	"antihidetag": true,
 	"user_register": false,
 	"anti_delete" : false,
-	"anticall": false,
+	"anticall": true,
+	"auto_welcome_msg": true,
+	"auto_leave_msg": true,
 	"prefix": ".",
 	"language":"ind",
 	"ownerNumber": "6285365349803",
 	"ownerNumberr": "6285365349803",
-	"cr": "@Baall wangy",
-	"ownername": "paha Baall wangy",
-	"botname":"Bᴀᴀʟʙᴏᴛ",
+	"cr": "@DZU_XYོ",
+	"ownername": "Owner ku wangyོ",
+	"botname":"Baalʙᴏᴛ",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  Bᴀᴀʟʙᴏᴛ  」\nCreated By @Dzuxy"
+	"fake": " 「  Baalᴏᴛ  」\nCreated By @DZU_XYོ"
 }
